--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -333,7 +333,7 @@ The network throughputs are depicted in fig. \ref{fig:cctv_network_throughputs}.
 In section \ref{performance_characteristics} we identified the important performance characteristics of the implemented applications. In this section we will step through them and apply the simulation results.
 
 The performance of the browsers and FTP upload is depending only on the throughput. The application throughputs were previously depicted in fig. \ref{fig:cctv_app_throughput_all}.
-The FTP throughput is comparably high at every number of clients. When a low number of clients is surfing, the FTP upload almost uses the whole available bandwidth of the radio link. Only the steady load of the conference and the CCTV is slowing it down. With a bitrate of roughly 9 Mbps to 4 Mbps a good quality of service is achieved. But it is to be expected, that the FTP throughput decreases further with the number of clients rising above 60. Since a higher number of browsing clients does not fit the scenario, the FTP data rate does not set a maximum amount of clients.
+The FTP throughput is comparably high at every number of clients. When a low number of clients is surfing, the FTP upload almost uses the whole available bandwidth of the radio link. Only the steady load of the conference and the CCTV is slowing it down. With a bitrate of roughly 1.1 MB/s to 0.5 MB/s a good quality of service is achieved. But it is to be expected, that the FTP throughput decreases further with the number of clients rising above 60. Since a higher number of browsing clients does not fit the scenario, the FTP data rate does not set a limit to the number of clients.
 
 The important value of the data rates of the browsing clients is actually the data rate for a single HTTP request. These values are depicted in fig. \ref{fig:cctv_http_request_throughput}.
 \begin{figure}[!ht]
@@ -349,7 +349,7 @@ The important value of the data rates of the browsing clients is actually the da
 
 The adjusted data rate is calculated by applying the time a session was actually active instead of the whole simulation time.
 
-If only one to five clients are using the network a comparably high data rate of roughly 100 KB/s is achieved. In combination with a mean reply length of 672 KB this results in an average waiting time of 6.7 seconds. This is already a really bad experience. You can argue that it is acceptable at the given circumstances. We argued before that an average waiting time of 10 seconds is acceptable in these circumstances. This time is exceeded, when more than 10 clients are using the network. The average HTTP Response Time is depicted in fig. \ref{fig:cctv_http_request_time}. Therefore 10 clients provide a maximum of the proposed network configuration.
+If only one to five clients are using the network a comparably high data rate of roughly 100 KB/s is achieved. In combination with a mean reply length of 672 KB this results in an average waiting time of 6.7 seconds. This is already a really bad experience. We argued before that an average waiting time of 10 seconds is acceptable in these circumstances. This time is exceeded, when more than 10 clients are using the network. Therefore 10 clients provide a maximum of the proposed network configuration. The average HTTP Response Times are depicted in fig. \ref{fig:cctv_http_request_time}. 
 
 The performance characteristics of the video conference and the CCTV are the packet loss ratio and packet delays. The simulation results are depicted in fig \ref{fig:cctv_app_packet_loss_rates} and \ref{fig:cctv_app_packet_delays} respectively.
 \begin{figure}[!ht]
@@ -358,7 +358,7 @@ The performance characteristics of the video conference and the CCTV are the pac
   \caption{Packet loss rates of the applications of the simulated network including confidence intervals at a confidence level of 0.95.} \label{fig:cctv_app_packet_loss_rates}
 \end{figure}
 
-The packet loss rates of the CCTV stream starts at a comparably high packet loss rate and decreases up to 0 for a higher number of clients. When a low number of clients is using the network almost all TCP traffic is directed to the main campus. Therefore the congestion at the radio link causes the queues at the Remote Router to drop packets. Therefore increasing the packet loss rate of the CCTV stream. A packet loss rate of 5\% is not exceeded at any amount of clients. Therefore a good quality is to be expected.
+The packet loss rates of the CCTV stream starts at a comparably high packet loss rate and decreases up to 0 for a higher number of clients. When a low number of clients is using the network almost all TCP traffic is directed to the main campus. Therefore the congestion at the radio link causes the queues at the Remote Router to drop packets. This increasing the packet loss rate of the CCTV stream. A packet loss rate of 5\% is not exceeded at any number of clients, resulting in a good quality.
 
 The packet loss rate of the stream directed to the professors laptop is low for a small number of clients and increases up to a rate of roughly 0.7\% at 10 clients and keeps steady from there on. A possible explanation for the low loss rate at the beginning, while the loss rate for CCTV is high is, that the packet size of the video stream is much smaller than the CCTV stream packet size. While the CCTV packets arrive late due to transmission delay the video stream packets arrive faster and are therefore not considered lost.
 
@@ -384,7 +384,7 @@ The drop rate of the WLAN is increasing monotonously, while the Main Router drop
 
 The steep increase of the drop rate at the main router indicates the impact of the HTTP requests. When a request reaches the internet, the server initiates a reply, which causes a congestion at the main router, because the radio link is fully in use at all times. With a low number of clients the increase of requests is primarily linear. Therefore the drop rates at the main router increase linearly as aswell. With the number of clients however the share of the bandwidth of each client decreases, this results in a longer session duration. A longer session duration means a decrease of the number of requests, since no new request is issued before the current request got served. This opposed effects increase the congestion at the main router up to 10 clients linearly. Afterwards the secondary effect decreases the congestion caused by the primary effect, resulting in a logarithmic behavior of several curves. For instance the packet drop rate at the WLAN access point. The queues at the access point and the main router contain the same traffic. Since the congestion at the access point continously rises, the access point reduces the request throughput, which causes the congestion and therefore drop rate of the main router to finally go down, when 30 web clients and more use the network.
 With more than 30 to 40 clients, the access point and therefore the WLAN takes over the role of the crucial bottleneck.
-Since the UDP traffic directed to the conference laptop and the vast amount of traffic generated by the HTTP requests traverse the exact same queues, the resulting throughputs and packet drop rates are closely related.
+Since the UDP stream directed to the conference laptop and the vast amount of traffic generated by the HTTP requests traverse the exact same queues, the resulting throughputs and packet drop rates are closely related.
 
 \begin{figure}[!ht]
   \centering
